[BUGFIX] remove whitespaces in f:format.currency

--- a/Resources/Private/Backend/Partials/Order/Show/OrderTax.html
+++ b/Resources/Private/Backend/Partials/Order/Show/OrderTax.html
@@ -7,7 +7,5 @@
                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                        prependCurrency="{settings.format.currency.prependCurrency}"
                        separateCurrency="{settings.format.currency.separateCurrency}"
-                       decimals="{settings.format.currency.decimals}">
-        {orderTax.tax}
-    </f:format.currency>
+                       decimals="{settings.format.currency.decimals}">{orderTax.tax}</f:format.currency>
 </li>
