--- a/Resources/Private/Backend/Templates/Order/Statistic.html
+++ b/Resources/Private/Backend/Templates/Order/Statistic.html
@@ -35,9 +35,7 @@
                                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                        prependCurrency="{settings.format.currency.prependCurrency}"
                                        separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">
-                        {statistics.orderItemGross}
-                    </f:format.currency>
+                                       decimals="{settings.format.currency.decimals}">{statistics.orderItemGross}</f:format.currency>
                 </td>
                 <td>
                     <f:format.currency currencySign="{settings.format.currency.currencySign}"
@@ -45,9 +43,7 @@
                                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                        prependCurrency="{settings.format.currency.prependCurrency}"
                                        separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">
-                        {statistics.orderItemAverageGross}
-                    </f:format.currency>
+                                       decimals="{settings.format.currency.decimals}">{statistics.orderItemAverageGross}</f:format.currency>
                 </td>
             </tr>
             <tr>
@@ -58,9 +54,7 @@
                                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                        prependCurrency="{settings.format.currency.prependCurrency}"
                                        separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">
-                        {statistics.orderItemNet}
-                    </f:format.currency>
+                                       decimals="{settings.format.currency.decimals}">{statistics.orderItemNet}</f:format.currency>
                 </td>
                 <td>
                     <f:format.currency currencySign="{settings.format.currency.currencySign}"
@@ -68,9 +62,7 @@
                                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                        prependCurrency="{settings.format.currency.prependCurrency}"
                                        separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">
-                        {statistics.orderItemAverageNet}
-                    </f:format.currency>
+                                       decimals="{settings.format.currency.decimals}">{statistics.orderItemAverageNet}</f:format.currency>
                 </td>
             </tr>
             </tbody>
