--- a/Resources/Private/Backend/Templates/Product/Show.html
+++ b/Resources/Private/Backend/Templates/Product/Show.html
@@ -76,9 +76,7 @@
                     <td style="text-align: right;">
                         <f:format.currency currencySign="{settings.format.currency.currencySign}"
                                            decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                           thousandsSeparator="{settings.format.currency.thousandsSeparator}">
-                            {variant.price}
-                        </f:format.currency>
+                                           thousandsSeparator="{settings.format.currency.thousandsSeparator}">{variant.price}</f:format.currency>
                     </td>
                 </tr>
             </f:for>
@@ -119,9 +117,7 @@
                     <td style="text-align: right;">
                         <f:format.currency currencySign="{settings.format.currency.currencySign}"
                                            decimalSeparator="{settings.format.currency.decimalSeparator}"
-                                           thousandsSeparator="{settings.format.currency.thousandsSeparator}">
-                            {relatedProduct.price}
-                        </f:format.currency>
+                                           thousandsSeparator="{settings.format.currency.thousandsSeparator}">{relatedProduct.price}</f:format.currency>
                     </td>
                 </tr>
             </f:for>
