--- a/Resources/Private/Partials/Bootstrap/Cart/Summary.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Summary.html
@@ -10,9 +10,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {cart.net}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{cart.net}</f:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
@@ -26,9 +24,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {cart.gross}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{cart.gross}</f:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
@@ -45,9 +41,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {cart.serviceNet}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{cart.serviceNet}</f:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
@@ -61,9 +55,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {cart.serviceGross}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{cart.serviceGross}</f:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
@@ -80,9 +72,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {cart.totalNet}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{cart.totalNet}</f:format.currency>
     </div>
     <div class="cart_col cart_foot_col1 cart_servicecost_total_gross">
         <f:translate
@@ -94,9 +84,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {cart.totalGross}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{cart.totalGross}</f:format.currency>
     </div>
     <div class="cart_cleaner"><!-- --></div>
 
