--- a/Resources/Private/Partials/Default/Cart/Mail/Summary.html
+++ b/Resources/Private/Partials/Default/Cart/Mail/Summary.html
@@ -10,9 +10,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.net}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.net}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -28,9 +26,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.gross}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.gross}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -49,9 +45,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.serviceNet}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.serviceNet}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -67,9 +61,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.serviceGross}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.serviceGross}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -88,9 +80,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.totalNet}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.totalNet}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -106,9 +96,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.totalGross}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.totalGross}</f:format.currency>
         </span>
     </td>
 </tr>
