--- a/Resources/Private/Partials/Default/Cart/Summary.html
+++ b/Resources/Private/Partials/Default/Cart/Summary.html
@@ -9,9 +9,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.net}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.net}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -26,9 +24,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.gross}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.gross}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -46,9 +42,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.serviceNet}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.serviceNet}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -63,9 +57,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.serviceGross}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.serviceGross}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -83,9 +75,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.totalNet}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.totalNet}</f:format.currency>
         </span>
     </td>
 </tr>
@@ -100,9 +90,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.totalGross}
-            </f:format.currency>
+                               decimals="{settings.format.currency.decimals}">{cart.totalGross}</f:format.currency>
         </span>
     </td>
 </tr>
