--- a/Resources/Private/Partials/Foundation/Cart/Summary.html
+++ b/Resources/Private/Partials/Foundation/Cart/Summary.html
@@ -3,16 +3,14 @@
         <f:translate key="tx_cart_domain_model_order_product.cart_net"/>
     </td>
     <td class="a-right last">
-		<span class="price">
-			<f:format.currency currencySign="{settings.format.currency.currencySign}"
+        <span class="price">
+            <f:format.currency currencySign="{settings.format.currency.currencySign}"
                                decimalSeparator="{settings.format.currency.decimalSeparator}"
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.net}
-            </f:format.currency>
-		</span>
+                               decimals="{settings.format.currency.decimals}">{cart.net}</f:format.currency>
+        </span>
     </td>
 </tr>
 <tr>
@@ -20,16 +18,14 @@
         <f:translate key="tx_cart_domain_model_order_product.cart_gross"/>
     </td>
     <td class="a-right last">
-		<span class="price">
-			<f:format.currency currencySign="{settings.format.currency.currencySign}"
+        <span class="price">
+            <f:format.currency currencySign="{settings.format.currency.currencySign}"
                                decimalSeparator="{settings.format.currency.decimalSeparator}"
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.gross}
-            </f:format.currency>
-		</span>
+                               decimals="{settings.format.currency.decimals}">{cart.gross}</f:format.currency>
+        </span>
     </td>
 </tr>
 
@@ -40,16 +36,14 @@
         <f:translate key="tx_cart_domain_model_order_product.service_net"/>
     </td>
     <td class="a-right last">
-		<span class="price">
-			<f:format.currency currencySign="{settings.format.currency.currencySign}"
+        <span class="price">
+            <f:format.currency currencySign="{settings.format.currency.currencySign}"
                                decimalSeparator="{settings.format.currency.decimalSeparator}"
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.serviceNet}
-            </f:format.currency>
-		</span>
+                               decimals="{settings.format.currency.decimals}">{cart.serviceNet}</f:format.currency>
+        </span>
     </td>
 </tr>
 <tr>
@@ -57,16 +51,14 @@
         <f:translate key="tx_cart_domain_model_order_product.service_gross"/>
     </td>
     <td class="a-right last">
-		<span class="price">
-			<f:format.currency currencySign="{settings.format.currency.currencySign}"
+        <span class="price">
+            <f:format.currency currencySign="{settings.format.currency.currencySign}"
                                decimalSeparator="{settings.format.currency.decimalSeparator}"
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.serviceGross}
-            </f:format.currency>
-		</span>
+                               decimals="{settings.format.currency.decimals}">{cart.serviceGross}</f:format.currency>
+        </span>
     </td>
 </tr>
 
@@ -77,16 +69,14 @@
         <f:translate key="tx_cart_domain_model_order_product.total_net"/>
     </td>
     <td class="a-right last">
-		<span class="price">
-			<f:format.currency currencySign="{settings.format.currency.currencySign}"
+        <span class="price">
+            <f:format.currency currencySign="{settings.format.currency.currencySign}"
                                decimalSeparator="{settings.format.currency.decimalSeparator}"
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.totalNet}
-            </f:format.currency>
-		</span>
+                               decimals="{settings.format.currency.decimals}">{cart.totalNet}</f:format.currency>
+        </span>
     </td>
 </tr>
 <tr>
@@ -94,16 +84,14 @@
         <f:translate key="tx_cart_domain_model_order_product.total_gross"/>
     </td>
     <td class="a-right last">
-		<span class="price">
-			<f:format.currency currencySign="{settings.format.currency.currencySign}"
+        <span class="price">
+            <f:format.currency currencySign="{settings.format.currency.currencySign}"
                                decimalSeparator="{settings.format.currency.decimalSeparator}"
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {cart.totalGross}
-            </f:format.currency>
-		</span>
+                               decimals="{settings.format.currency.decimals}">{cart.totalGross}</f:format.currency>
+        </span>
     </td>
 </tr>
 
