--- a/Resources/Private/Backend/Partials/Order/List/Item.html
+++ b/Resources/Private/Backend/Partials/Order/List/Item.html
@@ -34,9 +34,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {orderItem.totalGross}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{orderItem.totalGross}</f:format.currency>
     </td>
     <td style="width: 75px; text-align: right;">
         <f:format.currency currencySign="{orderItem.currency}"
@@ -44,9 +42,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {orderItem.totalNet}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{orderItem.totalNet}</f:format.currency>
     </td>
     <td class="order-payment-status-{orderItem.payment.status}">
         {orderItem.payment.name} <br/>
