--- a/Resources/Private/Partials/Bootstrap/Cart/Product.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Product.html
@@ -12,9 +12,7 @@
                                    thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                    prependCurrency="{settings.format.currency.prependCurrency}"
                                    separateCurrency="{settings.format.currency.separateCurrency}"
-                                   decimals="{settings.format.currency.decimals}">
-                    {cartProduct.price}
-                </f:format.currency>
+                                   decimals="{settings.format.currency.decimals}">{cartProduct.price}</f:format.currency>
             </f:else>
         </f:if>
     </div>
@@ -27,9 +25,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {cartProduct.gross}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{cartProduct.gross}</f:format.currency>
     </div>
     <div>
         <f:link.action action="removeProduct" arguments="{cartProduct: product.id}">delete</f:link.action>
