--- a/Resources/Private/Partials/Bootstrap/Cart/Tax.html
+++ b/Resources/Private/Partials/Bootstrap/Cart/Tax.html
@@ -6,7 +6,5 @@
                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                        prependCurrency="{settings.format.currency.prependCurrency}"
                        separateCurrency="{settings.format.currency.separateCurrency}"
-                       decimals="{settings.format.currency.decimals}">
-        {tax}
-    </f:format.currency>
+                       decimals="{settings.format.currency.decimals}">{tax}</f:format.currency>
 </div>
