--- a/Resources/Private/Partials/Default/Cart/Mail/ProductWithVariant.html
+++ b/Resources/Private/Partials/Default/Cart/Mail/ProductWithVariant.html
@@ -23,9 +23,7 @@
                                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                        prependCurrency="{settings.format.currency.prependCurrency}"
                                        separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">
-                        {variant.priceCalculated}
-                    </f:format.currency>
+                                       decimals="{settings.format.currency.decimals}">{variant.priceCalculated}</f:format.currency>
                 </td>
                 <td style="text-align: right;">
                     {variant.quantity}
@@ -36,9 +34,7 @@
                                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                        prependCurrency="{settings.format.currency.prependCurrency}"
                                        separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">
-                        {variant.gross}
-                    </f:format.currency>
+                                       decimals="{settings.format.currency.decimals}">{variant.gross}</f:format.currency>
                 </td>
             </tr>
         </f:else>
@@ -84,9 +80,7 @@
                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                            prependCurrency="{settings.format.currency.prependCurrency}"
                            separateCurrency="{settings.format.currency.separateCurrency}"
-                           decimals="{settings.format.currency.decimals}">
-            {product.gross}
-        </f:format.currency>
+                           decimals="{settings.format.currency.decimals}">{product.gross}</f:format.currency>
     </td>
     <td class="last">
         &nbsp;
