--- a/Resources/Private/Partials/Default/Cart/TaxList.html
+++ b/Resources/Private/Partials/Default/Cart/TaxList.html
@@ -13,9 +13,7 @@
                                    thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                    prependCurrency="{settings.format.currency.prependCurrency}"
                                    separateCurrency="{settings.format.currency.separateCurrency}"
-                                   decimals="{settings.format.currency.decimals}">
-                    {tax}
-                </f:format.currency>
+                                   decimals="{settings.format.currency.decimals}">{tax}</f:format.currency>
             </span>
         </td>
     </tr>
