--- a/Resources/Private/Partials/Default/Product/BasePrice.html
+++ b/Resources/Private/Partials/Default/Product/BasePrice.html
@@ -7,9 +7,7 @@
                                    thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                    prependCurrency="{settings.format.currency.prependCurrency}"
                                    separateCurrency="{settings.format.currency.separateCurrency}"
-                                   decimals="{settings.format.currency.decimals}">
-                    {variant.priceCalculated}
-                </f:format.currency> / {variant.priceMeasure} {variant.priceMeasureUnit} :
+                                   decimals="{settings.format.currency.decimals}">{variant.priceCalculated}</f:format.currency> / {variant.priceMeasure} {variant.priceMeasureUnit} :
                 <f:if condition="{variant.isMeasureUnitCompatibility}">
                     <f:then>
                         <f:format.currency currencySign="{settings.format.currency.currencySign}"
@@ -17,9 +15,7 @@
                                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                            prependCurrency="{settings.format.currency.prependCurrency}"
                                            separateCurrency="{settings.format.currency.separateCurrency}"
-                                           decimals="{settings.format.currency.decimals}">
-                            {variant.calculatedBasePrice}
-                        </f:format.currency> / 1 {product.basePriceMeasureUnit}
+                                           decimals="{settings.format.currency.decimals}">{variant.calculatedBasePrice}</f:format.currency> / 1 {product.basePriceMeasureUnit}
                     </f:then>
                     <f:else>
                         ---
@@ -35,9 +31,7 @@
                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                prependCurrency="{settings.format.currency.prependCurrency}"
                                separateCurrency="{settings.format.currency.separateCurrency}"
-                               decimals="{settings.format.currency.decimals}">
-                {product.bestSpecialPrice}
-            </f:format.currency> / {product.priceMeasure} {product.priceMeasureUnit} :
+                               decimals="{settings.format.currency.decimals}">{product.bestSpecialPrice}</f:format.currency> / {product.priceMeasure} {product.priceMeasureUnit} :
             <f:if condition="{product.isMeasureUnitCompatibility}">
                 <f:then>
                     <f:format.currency currencySign="{settings.format.currency.currencySign}"
@@ -45,9 +39,7 @@
                                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                        prependCurrency="{settings.format.currency.prependCurrency}"
                                        separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">
-                        {product.calculatedBasePrice}
-                    </f:format.currency> / 1 {product.basePriceMeasureUnit}
+                                       decimals="{settings.format.currency.decimals}">{product.calculatedBasePrice}</f:format.currency> / 1 {product.basePriceMeasureUnit}
                 </f:then>
                 <f:else>
                     ---
