--- a/Resources/Private/Partials/Foundation/Cart/Form/ShippingMethod.html
+++ b/Resources/Private/Partials/Foundation/Cart/Form/ShippingMethod.html
@@ -17,9 +17,7 @@
                                                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                                            prependCurrency="{settings.format.currency.prependCurrency}"
                                                            separateCurrency="{settings.format.currency.separateCurrency}"
-                                                           decimals="{settings.format.currency.decimals}">
-                                            {shipping.gross}
-                                        </f:format.currency>
+                                                           decimals="{settings.format.currency.decimals}">{shipping.gross}</f:format.currency>
                                     </f:then>
                                     <f:else>
                                         <label>
@@ -31,9 +29,7 @@
                                                         thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                                         prependCurrency="{settings.format.currency.prependCurrency}"
                                                         separateCurrency="{settings.format.currency.separateCurrency}"
-                                                        decimals="{settings.format.currency.decimals}">
-                                                    {shipping.gross}
-                                                </f:format.currency>
+                                                        decimals="{settings.format.currency.decimals}">{shipping.gross}</f:format.currency>
                                             </f:link.action>
                                         </label>
                                     </f:else>
