--- a/Resources/Private/Templates/Foundation/Cart/ShowMini.html
+++ b/Resources/Private/Templates/Foundation/Cart/ShowMini.html
@@ -22,9 +22,7 @@
                                                                thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                                                prependCurrency="{settings.format.currency.prependCurrency}"
                                                                separateCurrency="{settings.format.currency.separateCurrency}"
-                                                               decimals="{settings.format.currency.decimals}">
-                                                {variant.gross}
-                                            </f:format.currency>
+                                                               decimals="{settings.format.currency.decimals}">{variant.gross}</f:format.currency>
                                         </div>
                                         <div class="cart_cleaner"><!-- --></div>
                                     </div>
@@ -44,9 +42,7 @@
                                                            thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                                            prependCurrency="{settings.format.currency.prependCurrency}"
                                                            separateCurrency="{settings.format.currency.separateCurrency}"
-                                                           decimals="{settings.format.currency.decimals}">
-                                            {cartProduct.gross}
-                                        </f:format.currency>
+                                                           decimals="{settings.format.currency.decimals}">{cartProduct.gross}</f:format.currency>
                                     </div>
                                     <div class="cart_cleaner"><!-- --></div>
                                 </div>
@@ -65,9 +61,7 @@
                                        thousandsSeparator="{settings.format.currency.thousandsSeparator}"
                                        prependCurrency="{settings.format.currency.prependCurrency}"
                                        separateCurrency="{settings.format.currency.separateCurrency}"
-                                       decimals="{settings.format.currency.decimals}">
-                        {cart.gross}
-                    </f:format.currency>
+                                       decimals="{settings.format.currency.decimals}">{cart.gross}</f:format.currency>
                 </div>
                 <div class="cart_cleaner"><!-- --></div>
 
